--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pillow==12.0.0
 pystray==0.19.5
 plyer==2.1.0
 requests==2.32.3
-pyaudio==0.2.11
+# pyaudio==0.2.11  # Не потрібен для сервера, залишено для локального використання
 websockets==12.0
 asyncio-mqtt==0.16.1
 
