Add pyngrok integration - no external software needed

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ requests==2.32.3
 # pyaudio==0.2.11  # Не потрібен для сервера, залишено для локального використання
 websockets==12.0
 asyncio-mqtt==0.16.1
+pyngrok==6.0.0
 
